# text-cleaner

./: Cargo.toml  README.md
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
text-cleaner/: Cargo.toml  README.md
text-cleaner/src/: clean.rs
yew-frontend/: .gitignore  Cargo.toml  Dockerfile  README.md  index.html
yew-frontend/public/: main.css
yew-frontend/src/: glue.rs  lib.rs  main.rs  router.rs
yew-frontend/src/components/: context.rs  mod.rs  navbar.rs  settings.rs  textbox.rs  textboxes.rs
yew-frontend/src/contexts/: config.rs  mod.rs  text_input.rs  theme.rs
yew-frontend/src/layouts/: base.rs
yew-frontend/src/pages/: about.rs  home.rs  mod.rs
