[package]
name = "text-cleaner-app"
version = "1.0.0"
description = "A Tauri app to clean some text with common operations."
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
license-file = "../LICENSE.md"
repository = "http://github.com/aalekhpatel07/text-cleaner"
default-run = "text-cleaner-app"
edition = "2021"
rust-version = "1.57"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
