[package]
name = "text-cleaner"
version = "0.1.0"
edition = "2021"
description = "An implementation of some common text manipulation operations."
license-file = "../LICENSE.md"
readme = "README.md"
documentation = "https://docs.rs/text-cleaner"
repository = "https://github.com/aalekhpatel07/text-cleaner"
homepage = "https://docs.rs/text-cleaner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4.0"
diacritics = { version = "0.1.3" }
validator = { version="0.15" }
unicode-normalization = { version = "0.1.19"}
linkify = { version = "0.8.1"}
hashbrown = { version = "0.11.2" }
